# OpenGLRenderer

./: CMakeLists.txt  CMakePresets.json  README.md  camera.cpp  fonts.cpp  fonts.h  model.cpp  model.h  modelLoading.cpp  shaders.h  textures.cpp  textures.h  utility.h
include/glad/: glad.h
resources/bunny/.svn/: wc.db
shaders/: lightfrag.glsl  lightvert.glsl  outfrag.glsl  outvert.glsl  shaderfrag.glsl  shadervert.glsl
src/: camera.h  fonts.h  glad.c  main.cpp  mesh.h  model.cpp  model.h  setup.h  shaders.cpp  textures.cpp  textures.h  utility.cpp
